@startuml
left to right direction
skinparam classAttributeIconSize 0
hide empty methods

package "model" {
  class Feedback <<entity>> {
    - feedback_id  : int
    - customer_id  : int
    - product_id   : int
    - content      : String
    - image_url    : String
    - status       : String
    - created_at   : Timestamp
    + getters/setters()
  }

  class Customer <<entity>> {
    - customer_id    : int
    - customer_name  : String
    - image          : String
    + getters/setters()
  }
}

package "db" {
  class DBContext {
    - conn : Connection
    + getConnection() : Connection
  }
}

package "dao" {
  class FeedbackDAO <<dao>> {
    + findByProduct(product_id:int, page:int, size:int) : List<Feedback>
    + countByProduct(product_id:int) : int
  }
  class CustomerDAO <<dao>> {
    + getCustomerById(id:int) : Customer
  }
}

package "controller" {
  class FeedbackListServlet <<controller>> {
    - feedbackDAO : FeedbackDAO
    - customerDAO : CustomerDAO
    + doGet(req:HttpServletRequest, resp:HttpServletResponse) : void
  }
}

FeedbackDAO --|> DBContext
CustomerDAO --|> DBContext
FeedbackListServlet ..> FeedbackDAO
FeedbackListServlet ..> CustomerDAO
FeedbackDAO ..> Feedback
CustomerDAO ..> Customer
@enduml
